Simple notificacion para hacer push a la rama

--- a/details.html
+++ b/details.html
@@ -51,6 +51,9 @@
             
             
             <h2> I'm developer two, creating a conflict with my critical code change!</h2>
+            <ol>
+                <li>Este cambio ha sido creado localmente y se hace un push a GitHub a nivel de rama</li>
+            </ol>
             <hr />
             <footer>
                 <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
@@ -64,3 +67,4 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
+ 
